--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-helpers"
-version = "0.10.2"
+version = "0.10.3"
 description = "Affinidi Messaging Helpers"
 edition.workspace = true
 authors.workspace = true
@@ -64,3 +64,4 @@ uuid = { version = "1.15", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 affinidi-tdk.workspace = true
+affinidi-did-authentication.workspace = true
