--- a/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-mediator-common"
-version = "0.10.2"
+version = "0.10.3"
 description = "Affinidi Messaging Mediator Common Library"
 edition.workspace = true
 authors.workspace = true
@@ -29,6 +29,7 @@ rustls = { version = "0.23", default-features = false, features = [
 ] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
 thiserror = "2.0"
 tracing = { version = "0.1", features = [
     "max_level_debug",
