--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-sdk"
-version = "0.10.2"
+version = "0.10.3"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -16,6 +16,7 @@ repository.workspace = true
 # Affinidi Crates
 affinidi-tdk-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
+affinidi-did-authentication.workspace = true
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
